# sparcle

./: CMakeLists.txt  Doxyfile.in  LICENSE  README.md
src/: sparcle.c  sparcle.h.in
